--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ai-chat-app2",
   "version": "0.1.0",
   "private": true,
-
+  "homepage": "https://sarabpreets7.github.io/ai-chat-app2",
   "dependencies": {
     "@chakra-ui/react": "^3.14.2",
     "@emotion/react": "^11.14.0",
@@ -27,7 +27,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-  "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -46,5 +46,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.3.0"
   }
 }
